--- a/examples/flet_gemini_example/pyproject.toml
+++ b/examples/flet_gemini_example/pyproject.toml
@@ -31,7 +31,7 @@ copyright = "Copyright (C) 2025 by MyCompany"
 path = "src"
 
 [tool.flet.dev_packages]
-flet-gemini = "..\.." # relative path
+flet-gemini = "..\\.." # relative path
 
 [tool.uv]
 dev-dependencies = [
@@ -39,8 +39,8 @@ dev-dependencies = [
 ]
 
 [tool.uv.sources]
-flet-gemini = { path = "..\..\", editable = true }
+flet-gemini = { path = "..\\..\\", editable = true }
 
 [tool.poetry.group.dev.dependencies]
 flet = {extras = ["all"], version = "0.28.3"}
-flet-gemini = {path = "..\..\", develop = true}
+flet-gemini = {path = "..\\..\\", develop = true}
